# rauri

./: Cargo.toml  LICENSE  README.md  rauri.md
.github/workflows/: bin-release.yml  release-workflow.yml  release.yml
src/: aur.rs  config.rs  main.rs  package.rs  tracker.rs  ui.rs
