[package]
name = "rauri"
version = "0.1.1"
edition = "2021"
authors = ["https://github.com/ognrdrch"]
description = "A minimal AUR helper for Arch Linux "
license = "MIT"
readme = "README.md"
keywords = ["aur", "helper", "archlinux", "package-manager","aurhelper"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/ognrdrch/rauri"  

[[bin]]
name = "rauri"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
regex = "1.10"
colored = "2.1"
atty = "0.2"
dirs = "5.0"
urlencoding = "2.1"
once_cell = "1.19"

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo", "rust"]
depends = ["pacman", "git"]

